[package]
name = "fiximg"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = { version = "1.2.0", features = ["rayon"] }
oxipng = { version = "5.0.0", default-features = false, features = [
    "filetime",
    "parallel",
    "libdeflater",
    "zopfli",
] }
rayon = "1.5.1"
